automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +52,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fork & Fig',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 610},\n",
+       " {'name': 'Salt And Board',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 11},\n",
+       " {'name': 'Frontier Restaurant',\n",
+       "  'price': '$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 1373},\n",
+       " {'name': 'Nexus Brewery',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 680},\n",
+       " {'name': \"Devon's Pop Smoke\",\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 54},\n",
+       " {'name': 'Cocina Azul',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': True,\n",
+       "  'review_count': 647},\n",
+       " {'name': 'Philly Steaks',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 25},\n",
+       " {'name': 'Stripes Biscuit',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': True,\n",
+       "  'review_count': 20}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "restaurants"
    ]
@@ -75,11 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-4307a34347e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrestaurants\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# ['Fork & Fig',\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#  'Salt And Board',\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#  'Frontier Restaurant',\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
    "source": [
-    "names = None\n",
+    "names = restaurants['name']\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
